--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/mongodb": "^4.0.6",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
 		"flowbite": "^2.5.1",
 		"flowbite-svelte": "^0.46.15",
@@ -27,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"concurrently": "^8.2.2"
+		"concurrently": "^8.2.2",
+		"dotenv": "^16.4.5"
 	}
 }
